--- a/index.html
+++ b/index.html
@@ -1,17 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./vendor/normalize.css">
-    <link rel="stylesheet" href="./styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Страница с подбором велосипедов">
+  <meta name="author" content="Анастасия Боднюк">
+  <meta name="author" content="Артём Станкевич">
+  <title>Шоссе, ТТ и Грэвел</title>
+  <link rel="stylesheet" href="./pages/index.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body class="page">
+  <header class="header">
+    <nav>
+      <ul class="menu__links">
+        <li>
+          <a href="#" class="menu__link" target="_self">Покрытия и градиенты</a>
+        </li>
+        <li>
+          <a href="#" class="menu__link" target="_self">Велосипеды</a>
+        </li>
+        <li>
+          <a href="#" class="menu__link" target="_self">Тренировки</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
+  <main class="content">
+    <section class="intro">
+      <div class="intro__container">
+        <h1 class="intro__title">Шоссе, ТТ и Грэвел</h1>
+        <p class="intro__text">Триатлонные старты, горные серпантины или грейвел заезды по живописным маршрутам
+          – нужно только определиться с выбором велосипеда и отправиться в путь.</p>
+        <button class="intro__button">Подробнее</button>
+        <div class="intro__caption-container">
+          <span class="intro__caption">Cannondale Systemsix</span>
+          <span class="intro__line"></span>
+        </div>
+      </div>
+      <img class="intro__image" alt="Трасса в горах" src="./images/mountains-highway.jpg">
+    </section>
+
+    <section class="merckx">
+      <img class="merckx__image" alt="Дорога среди гор" src="./images/mountains-plato.jpg">
+      <div class="merckx__container">
+        <blockquote class="merckx__quote">«Катайся много или мало, долго или коротко, как хочешь - но катайся»
+        </blockquote>
+        <p class="merckx__quote-author">Эдди Меркс</p>
+        <p class="merckx__quote-author-subline">Велогонщик</p>
+      </div>
+    </section>
+
+    <section class="highway">
+      <h2 class="highway__title">Шоссе</h2>
+      <p class="highway__text">На шоссейном велосипеде можно ездить по асфальту на разных градиентах: будь то
+        горы или равнины. Гонки проходят в командном пелотоне, но тренироваться можно и самостоятельно.</p>
+      <div class="highway__photos">
+        <img class="highway__photo" alt="Горный пейзаж и дорога" src="./images/landscape-mountains.jpg">
+        <img class="highway__photo" alt="Дорога посреди леса" src="./images/landscape-forest.jpg">
+      </div>
+      <!-- По поводу зелёной штуки, если судить по макету, то это не часть изображения и его нужно абсолютно позиционровать относительно первой картинки -->
+      <div class="highway__buttons">
+        <div class="highway__button">
+          <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M9 1L2 9L9 17" stroke="#151515" stroke-width="2" />
+          </svg>
+        </div>
+        <div class="highway__button">
+          <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 17L8 9L1 0.999999" stroke="#151515" stroke-width="2" />
+          </svg>
+        </div>
+        <!-- svg потом нужно оптимизировать -->
+      </div>
+    </section>
+
+    <section class="cards">
+      <div class="cards__header">
+        <h2 class="cards__title">Велосипеды</h2>
+        <nav>
+          <ul class="cards__menu">
+            <li>
+              <a href="#" class="cards__link">Шоссе</a>
+            </li>
+            <li>
+              <a href="#" class="cards__link">Грэвел</a>
+            </li>
+            <li>
+              <a href="#" class="cards__link">ТТ</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="cards__grid">
+        <div class="card">
+          <img class="card__image" alt="Модель велосипеда Cervelo Caledonia-5" src="./images/carvelo-caledonia-5.jpg">
+          <p class="card__caption">
+            <a href="Cervelo Caledonia 5  —  https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN "
+              class="card__link" target="_blank">Cervelo Caledonia-5</a>
+          </p>
+        </div>
+        <div class="card">
+          <img class="card__image" alt="Модель велосипеда Cannondale Systemsix Himond"
+            src="./images/cannondale-systemsix-himond.jpg">
+          <p class="card__caption">
+            <a href="Cannondale Systemsix Himod  —  https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
+              class="card__link" target="_blank">Cannondale Systemsix Himond</a>
+          </p>
+        </div>
+        <div class="card">
+          <img class="card__image" alt="Модель велосипеда Trek Domane SL-7" src="./images/trek-domane-sl-7.jpg">
+          <p class="card__caption">
+            <a href="Trek Domane SL-7  —  https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
+              class="card__link" target="_blank">Trek Domane SL-7</a>
+          </p>
+        </div>
+      </div>
+      <!-- Я искренне не понимаю, почему у велосипедов задний фон такой же, как у всей страницы -->
+      <!--Ещё 6 великов добавлять по факту не нужно, ибо это на макете это подразумевает функции с js-->
+    </section>
+
+    <section class="workout">
+      <div class="workout__container">
+        <h2 class="workout__title">Тренировки</h2>
+        <p class="workout__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а
+          записать эти тренировки поможет приложение Strava, а также это приложение позволит построить
+          тренировочный план.</p>
+        <ul class="workout__list">
+          <li>
+            <a href="https://www.strava.com" class="workout__list-link" target="_blank">Strava</a>
+          </li>
+          <li>
+            <a href="https://www.komoot.com" class="workout__list-link" target="_blank">Komoot</a>
+          </li>
+        </ul>
+      </div>
+      <img class="workout__image" alt="Дорога на склоне среди деревьев" href="./images/hillside-road.jpg">
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer__wrapper">
+      <h2 class="footer__title">Подпишитесь на рассылку &mdash;</h2>
+      <input type="e-mail" class="footer__input" placeholder="Ваш e-mail">
+      <p class="footer__copyright">&copy; Road Club 2021</p>
+    </div>
+  </footer>
 </body>
 
 </html>
