--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <ul class="menu__links">
         <li>
-          <a href="#" class="menu__link" target="_self">Покрытия и градиенты</a>
+          <a href="#" class="menu__link" target="_self">Покрытия и&nbsp;градиенты</a>
         </li>
         <li>
           <a href="#" class="menu__link" target="_self">Велосипеды</a>
@@ -33,9 +33,9 @@
   <main class="content">
     <section class="intro">
       <div class="intro__container">
-        <h1 class="intro__title">Шоссе, ТТ и Грэвел</h1>
-        <p class="intro__text">Триатлонные старты, горные серпантины или грейвел заезды по живописным маршрутам
-          – нужно только определиться с выбором велосипеда и отправиться в путь.</p>
+        <h1 class="intro__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
+        <p class="intro__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам
+          &mdash;нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
         <button class="intro__button">Подробнее</button>
         <div class="intro__caption-container">
           <span class="intro__caption">Cannondale Systemsix</span>
@@ -48,7 +48,8 @@
     <section class="merckx">
       <img class="merckx__image" alt="Дорога среди гор" src="./images/mountains-plato.jpg">
       <div class="merckx__container">
-        <blockquote class="merckx__quote">«Катайся много или мало, долго или коротко, как хочешь - но катайся»
+        <blockquote class="merckx__quote">&laquo;Катайся много или мало, долго или коротко, как хочешь&nbsp;&mdash;
+          но&nbsp;катайся&raquo;
         </blockquote>
         <p class="merckx__quote-author">Эдди Меркс</p>
         <p class="merckx__quote-author-subline">Велогонщик</p>
@@ -57,10 +58,13 @@
 
     <section class="highway">
       <h2 class="highway__title">Шоссе</h2>
-      <p class="highway__text">На шоссейном велосипеде можно ездить по асфальту на разных градиентах: будь то
-        горы или равнины. Гонки проходят в командном пелотоне, но тренироваться можно и самостоятельно.</p>
+      <p class="highway__text">На&nbsp;шоссейном велосипеде можно ездить по&nbsp;асфальту на&nbsp;разных градиентах:
+        будь&nbsp;то
+        горы или равнины. Гонки проходят в&nbsp;командном пелотоне, но&nbsp;тренироваться можно и&nbsp;самостоятельно.
+      </p>
       <div class="highway__photos">
-        <img class="highway__photo" alt="Горный пейзаж и дорога" src="./images/landscape-mountains.jpg">
+        <img class="highway__photo highway__photo_relative" alt="Горный пейзаж и дорога"
+          src="./images/landscape-mountains.jpg">
         <img class="highway__photo" alt="Дорога посреди леса" src="./images/landscape-forest.jpg">
       </div>
       <!-- По поводу зелёной штуки, если судить по макету, то это не часть изображения и его нужно абсолютно позиционровать относительно первой картинки -->
@@ -85,7 +89,7 @@
         <nav>
           <ul class="cards__menu">
             <li>
-              <a href="#" class="cards__link">Шоссе</a>
+              <a href="#" class="cards__link cards__link_active">Шоссе</a>
             </li>
             <li>
               <a href="#" class="cards__link">Грэвел</a>
@@ -98,37 +102,43 @@
       </div>
       <div class="cards__grid">
         <div class="card">
-          <img class="card__image" alt="Модель велосипеда Cervelo Caledonia-5" src="./images/carvelo-caledonia-5.jpg">
-          <p class="card__caption">
-            <a href="Cervelo Caledonia 5  —  https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN "
-              class="card__link" target="_blank">Cervelo Caledonia-5</a>
-          </p>
+          <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN "
+            class="card__link" target="_blank">
+            <img class="card__image" alt="Модель велосипеда Cervelo Caledonia-5" src="./images/carvelo-caledonia-5.jpg">
+            <p class="card__caption">
+              Cervelo Caledonia-5
+            </p>
+          </a>
         </div>
         <div class="card">
-          <img class="card__image" alt="Модель велосипеда Cannondale Systemsix Himond"
-            src="./images/cannondale-systemsix-himond.jpg">
-          <p class="card__caption">
-            <a href="Cannondale Systemsix Himod  —  https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
-              class="card__link" target="_blank">Cannondale Systemsix Himond</a>
-          </p>
+          <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
+            class="card__link" target="_blank">
+            <img class="card__image" alt="Модель велосипеда Cannondale Systemsix Himond"
+              src="./images/cannondale-systemsix-himond.jpg">
+            <p class="card__caption">
+              Cannondale Systemsix Himond
+            </p>
+          </a>
         </div>
         <div class="card">
-          <img class="card__image" alt="Модель велосипеда Trek Domane SL-7" src="./images/trek-domane-sl-7.jpg">
-          <p class="card__caption">
-            <a href="Trek Domane SL-7  —  https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
-              class="card__link" target="_blank">Trek Domane SL-7</a>
-          </p>
+          <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
+            class="card__link" target="_blank">
+            <img class="card__image" alt="Модель велосипеда Trek Domane SL-7" src="./images/trek-domane-sl-7.jpg">
+            <p class="card__caption">
+              Trek Domane SL-7
+            </p>
+          </a>
         </div>
       </div>
       <!-- Я искренне не понимаю, почему у велосипедов задний фон такой же, как у всей страницы -->
-      <!--Ещё 6 великов добавлять по факту не нужно, ибо это на макете это подразумевает функции с js-->
+      <!--Ещё 6 великов добавлять по факту не нужно, ибо на макете это подразумевает функции с js-->
     </section>
 
     <section class="workout">
       <div class="workout__container">
         <h2 class="workout__title">Тренировки</h2>
         <p class="workout__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а
-          записать эти тренировки поможет приложение Strava, а также это приложение позволит построить
+          записать эти тренировки поможет приложение Strava, а&nbsp;также это приложение позволит построить
           тренировочный план.</p>
         <ul class="workout__list">
           <li>
@@ -139,15 +149,17 @@
           </li>
         </ul>
       </div>
-      <img class="workout__image" alt="Дорога на склоне среди деревьев" href="./images/hillside-road.jpg">
+      <img class="workout__image" alt="Дорога на склоне среди деревьев" src="./images/hillside-road.jpg">
     </section>
   </main>
 
   <footer class="footer">
     <div class="footer__wrapper">
-      <h2 class="footer__title">Подпишитесь на рассылку &mdash;</h2>
-      <input type="e-mail" class="footer__input" placeholder="Ваш e-mail">
-      <p class="footer__copyright">&copy; Road Club 2021</p>
+      <h2 class="footer__title">Подпишитесь на&nbsp;рассылку &mdash;</h2>
+      <fieldset class="footer__form">
+        <input type="email" class="footer__input" placeholder="Ваш e-mail" name="email">
+      </fieldset>
+      <p class="footer__copyright">&copy;&nbsp;Road Club 2021</p>
     </div>
   </footer>
 </body>
