--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="card">
           <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN "
             class="card__link" target="_blank">
-            <img class="card__image" alt="Модель велосипеда Cervelo Caledonia-5" src="./images/carvelo-caledonia-5.jpg">
+            <img class="card__image" alt="Модель велосипеда Cervelo Caledonia-5" src="./images/Bike_1.jpg">
             <p class="card__caption">
               Cervelo Caledonia-5
             </p>
@@ -113,8 +113,7 @@
         <div class="card">
           <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
             class="card__link" target="_blank">
-            <img class="card__image" alt="Модель велосипеда Cannondale Systemsix Himond"
-              src="./images/cannondale-systemsix-himond.jpg">
+            <img class="card__image" alt="Модель велосипеда Cannondale Systemsix Himond" src="./images/Bike_2.jpg">
             <p class="card__caption">
               Cannondale Systemsix Himond
             </p>
@@ -123,7 +122,7 @@
         <div class="card">
           <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
             class="card__link" target="_blank">
-            <img class="card__image" alt="Модель велосипеда Trek Domane SL-7" src="./images/trek-domane-sl-7.jpg">
+            <img class="card__image" alt="Модель велосипеда Trek Domane SL-7" src="./images/Bike_3.jpg">
             <p class="card__caption">
               Trek Domane SL-7
             </p>
