--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <header class="header">
     <nav>
       <ul class="menu__links">
-        <li>
+        <span>asdfgh</span> <!--<li>
           <a href="#" class="menu__link" target="_self">Покрытия и&nbsp;градиенты</a>
-        </li>
+        </li>-->
         <li>
           <a href="#" class="menu__link" target="_self">Велосипеды</a>
         </li>
