--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <nav>
       <ul class="menu__links">
         <li>
-          <a href="#" class="menu__link" target="_self">Покрытия и&nbsp;градиенты</a>
+          <a href="#highway" class="menu__link" target="_self">Покрытия и&nbsp;градиенты</a>
         </li>
         <li>
-          <a href="#" class="menu__link" target="_self">Велосипеды</a>
+          <a href="#cards" class="menu__link" target="_self">Велосипеды</a>
         </li>
         <li>
-          <a href="#" class="menu__link" target="_self">Тренировки</a>
+          <a href="#workout" class="menu__link" target="_self">Тренировки</a>
         </li>
       </ul>
     </nav>
@@ -32,17 +32,15 @@
 
   <main class="content">
     <section class="intro">
-      <div class="intro__container">
-        <h1 class="intro__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
-        <p class="intro__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам
-          &mdash;нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
-        <button class="intro__button">Подробнее</button>
-        <div class="intro__caption-container">
-          <span class="intro__caption">Cannondale Systemsix</span>
-          <span class="intro__line"></span>
-        </div>
-      </div>
+      <h1 class="intro__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
       <img class="intro__image" alt="Трасса в горах" src="./images/mountains-highway.jpg">
+      <p class="intro__text">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам
+        &mdash;нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
+      <button class="intro__button">Подробнее</button>
+      <div class="intro__caption-container">
+        <span class="intro__caption">Cannondale Systemsix</span>
+        <span class="intro__line"></span>
+      </div>
     </section>
 
     <section class="merckx">
@@ -57,6 +55,7 @@
     </section>
 
     <section class="highway">
+      <a name="highway"></a>
       <h2 class="highway__title">Шоссе</h2>
       <p class="highway__text">На&nbsp;шоссейном велосипеде можно ездить по&nbsp;асфальту на&nbsp;разных градиентах:
         будь&nbsp;то
@@ -67,34 +66,33 @@
           src="./images/landscape-mountains.jpg">
         <img class="highway__photo" alt="Дорога посреди леса" src="./images/landscape-forest.jpg">
       </div>
-      <!-- По поводу зелёной штуки, если судить по макету, то это не часть изображения и его нужно абсолютно позиционровать относительно первой картинки -->
       <div class="highway__buttons">
         <div class="highway__button">
-          <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="highway__svg" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M9 1L2 9L9 17" stroke="#151515" stroke-width="2" />
           </svg>
         </div>
         <div class="highway__button">
-          <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="highway__svg" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1 17L8 9L1 0.999999" stroke="#151515" stroke-width="2" />
           </svg>
         </div>
-        <!-- svg потом нужно оптимизировать -->
       </div>
     </section>
 
     <section class="cards">
+      <a name="cards"></a>
       <div class="cards__header">
         <h2 class="cards__title">Велосипеды</h2>
         <nav>
           <ul class="cards__menu">
-            <li>
+            <li class="cards__menu-item">
               <a href="#" class="cards__link cards__link_active">Шоссе</a>
             </li>
-            <li>
+            <li class="cards__menu-item">
               <a href="#" class="cards__link">Грэвел</a>
             </li>
-            <li>
+            <li class="cards__menu-item">
               <a href="#" class="cards__link">ТТ</a>
             </li>
           </ul>
@@ -129,26 +127,28 @@
           </a>
         </div>
       </div>
-      <!-- Я искренне не понимаю, почему у велосипедов задний фон такой же, как у всей страницы -->
-      <!--Ещё 6 великов добавлять по факту не нужно, ибо на макете это подразумевает функции с js-->
+      <div class="cards__dotts">
+        <span class="cards__dott card__dott_active"></span>
+        <span class="cards__dott"></span>
+        <span class="cards__dott"></span>
+      </div>
     </section>
 
     <section class="workout">
-      <div class="workout__container">
-        <h2 class="workout__title">Тренировки</h2>
-        <p class="workout__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а
-          записать эти тренировки поможет приложение Strava, а&nbsp;также это приложение позволит построить
-          тренировочный план.</p>
-        <ul class="workout__list">
-          <li>
-            <a href="https://www.strava.com" class="workout__list-link" target="_blank">Strava</a>
-          </li>
-          <li>
-            <a href="https://www.komoot.com" class="workout__list-link" target="_blank">Komoot</a>
-          </li>
-        </ul>
-      </div>
+      <a name="workout"></a>
+      <h2 class="workout__title">Тренировки</h2>
       <img class="workout__image" alt="Дорога на склоне среди деревьев" src="./images/hillside-road.jpg">
+      <p class="workout__text">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а
+        записать эти тренировки поможет приложение Strava, а&nbsp;также это приложение позволит построить
+        тренировочный план.</p>
+      <ul class="workout__list">
+        <li>
+          <a href="https://www.strava.com" class="workout__list-link" target="_blank">Strava</a>
+        </li>
+        <li>
+          <a href="https://www.komoot.com" class="workout__list-link" target="_blank">Komoot</a>
+        </li>
+      </ul>
     </section>
   </main>
 
