--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
 
 <body class="page">
   <header class="header">
+    <div class="header__burger">
+      <span class="header__burger-line"></span>
+      <span class="header__burger-line header__burger-line_second"></span>
+      <span class="header__burger-line header__burger-line_third"></span>
+    </div>
     <nav>
-      <ul class="menu__links">
+      <ul class="header__links">
         <li>
-          <a href="#highway" class="menu__link" target="_self">Покрытия и&nbsp;градиенты</a>
+          <a href="#highway" class="header__link" target="_self">Покрытия и&nbsp;градиенты</a>
         </li>
         <li>
-          <a href="#cards" class="menu__link" target="_self">Велосипеды</a>
+          <a href="#cards" class="header__link" target="_self">Велосипеды</a>
         </li>
         <li>
-          <a href="#workout" class="menu__link" target="_self">Тренировки</a>
+          <a href="#workout" class="header__link" target="_self">Тренировки</a>
         </li>
       </ul>
     </nav>
